openobserve/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openobserve
  namespace: ${OPENOBSERVE_NAMESPACE}
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: luban-local
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: luban-gateway
    namespace: ${GATEWAY_NAMESPACE}
    sectionName: luban-public
  hostnames:
  - ${OPENOBSERVE_HOST}
  - ${OPENOBSERVE_PUBLIC_HOST}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: openobserve-router
      port: 5080
